--- a/pubs.html
+++ b/pubs.html
@@ -307,6 +307,24 @@ are <a href="impact.html#policy_submissions">here</a>.</p>
 <h3>2026</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-zhang26semantic">
+@article{zhang26semantic,
+  title = {Semantic-aware Adversarial Fine-tuning for {CLIP}},
+  author = {Jiacheng Zhang and Jinhao Li and Hanxun Huang and Sarah Monazam Erfani and Benjamin I. P. Rubinstein and Feng Liu},
+  journal = {Transactions on Machine Learning Research},
+  year = {2026},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Zhang, Jiacheng, Jinhao Li, Hanxun Huang, Sarah Monazam Erfani,
+Benjamin I. P. Rubinstein, and Feng Liu. “Semantic-aware Adversarial
+Fine-tuning for CLIP”. In: <em>Transactions on Machine Learning
+Research</em> (2026). Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('zhang26semantic.bib', 'bibtex-zhang26semantic')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-bulychev2026where">
 @inproceedings{bulychev2026where,
   author = {Maria Bulychev and Neil G. Marchant and Benjamin I. P. Rubinstein},
@@ -346,8 +364,9 @@ href="https://arxiv.org/abs/2512.14994">PDF</a>;
 <li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “Adaptive Data
 Analysis for Growing Data”. In: <em>Advances in Neural Information
 Processing Systems</em>. NeurIPS. Accepted. 2025 [<a
-href="https://arxiv.org/abs/2405.13375">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('marchant2025adaptive.bib', 'bibtex-marchant2025adaptive')">BibTeX</a>]</li>
+href="https://arxiv.org/abs/2405.13375">PDF</a>; <a
+href="https://neurips.cc/virtual/2025/loc/san-diego/poster/115261">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2025adaptive.bib', 'bibtex-marchant2025adaptive')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -367,8 +386,9 @@ href="https://arxiv.org/abs/2405.13375">PDF</a>;
 Rubinstein. “AdaptDel: Adaptable Deletion Rate Randomized Smoothing for
 Certified Robustness”. In: <em>Advances in Neural Information Processing
 Systems</em>. NeurIPS. Accepted. 2025 [<a
-href="https://arxiv.org/abs/2511.09316">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('huang2025adaptdel.bib', 'bibtex-huang2025adaptdel')">BibTeX</a>]</li>
+href="https://arxiv.org/abs/2511.09316">PDF</a>; <a
+href="https://neurips.cc/virtual/2025/loc/san-diego/poster/118935">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('huang2025adaptdel.bib', 'bibtex-huang2025adaptdel')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
