--- a/pubs.html
+++ b/pubs.html
@@ -313,7 +313,6 @@ are <a href="impact.html#policy_submissions">here</a>.</p>
   author = {Jiacheng Zhang and Jinhao Li and Hanxun Huang and Sarah Monazam Erfani and Benjamin I. P. Rubinstein and Feng Liu},
   journal = {Transactions on Machine Learning Research},
   year = {2026},
-  note = {Accepted},
 }
 </code></pre></div>
 
@@ -321,7 +320,10 @@ are <a href="impact.html#policy_submissions">here</a>.</p>
 <li>Zhang, Jiacheng, Jinhao Li, Hanxun Huang, Sarah Monazam Erfani,
 Benjamin I. P. Rubinstein, and Feng Liu. “Semantic-aware Adversarial
 Fine-tuning for CLIP”. In: <em>Transactions on Machine Learning
-Research</em> (2026). Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('zhang26semantic.bib', 'bibtex-zhang26semantic')">BibTeX</a>]</li>
+Research</em> (2026). [<a
+href="https://openreview.net/pdf?id=SzZOBzueK0">PDF</a>; <a
+href="https://github.com/tmlr-group/SAFT">code</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('zhang26semantic.bib', 'bibtex-zhang26semantic')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
